urpc/internal/core/analysis/testdata/errors/naming/enum_member_not_pascal.ufo
// @expect: E104

enum Status {
	active
	inactive
}
